--- a/test1/templates/components/dashboard.html
+++ b/test1/templates/components/dashboard.html
@@ -17,6 +17,9 @@
             object-fit: cover;
         }
      }
+     .hidden{
+        display: none;
+     }
     h5{
         font-size: medium;
     }
@@ -53,18 +56,18 @@
 <nav aria-label="Page navigation example ">
     <ul class="pagination justify-content-center">
       <li class="page-item ">
-        <a class="page-link disabled prev border-0">Previous</a>
+        <a class="page-link text-dark prev border-0">Previous</a>
       </li>
-      <li class="page-item"><a class="page-link border-0" href="#">1</a></li>
+      <!-- <li class="page-item"><a class="page-link border-0" href="#">1</a></li>
       <li class="page-item"><a class="page-link border-0" href="#">2</a></li>
-      <li class="page-item"><a class="page-link border-0" href="#">3</a></li>
+      <li class="page-item"><a class="page-link border-0" href="#">3</a></li> -->
       <li class="page-item">
-        <a class="page-link border-0 next" href="#">Next</a>
+        <a class="page-link border-0 next text-dark" href="#">Next</a>
       </li>
     </ul>
 </nav>
 <div class="loading-spinner"></div>
-<div class="grid">
+<div class="grid hidden">
 
 </div>
 
@@ -76,69 +79,126 @@
 
 <script>
 
-let currentPage = 1;
+// let currentPage = 1;
 const spinner = $('.loading-spinner');
 const container = $('.grid'); 
+const currentPage= '/photos?page=1&limit=9';
+let nextPage = '';
+var $grid = $('.grid').masonry({
+        // itemSelector: '.grid-item',
+        columnWidth: 80,
+        gutter:10,
+        stagger:70,
+        fitWidth: true
+    });
 
-
-function fetchData(page){
+function fetchImg(uri){
     $.ajax({
-    url: `https://picsum.photos/v2/list?page=${page}&limit=10`, // API endpoint
-    type: 'GET', // HTTP method (GET, POST, etc.)
-    dataType: 'json', 
-    success: function(data) {
-        console.log(data); 
-
-        if (data){
-            
+    url : uri,
+    type: 'GET',
+    dataType : 'json',
+    success: function(data){
+        console.log('data : ', data)
+        if (data.images){
+            container.addClass('hidden');
             $('.grid').empty();
-            data.forEach(item => {
-            const gridItem = $('<div>').addClass('grid-item shadow');
-            gridItem.html(`
-                <img src="${item.download_url}" alt="...">
-                <div class="p-1 px-2">
-                    <h5 class="mt-2">${item.author}</h5>
-                </div>
-            `);
+            data.images.forEach(item => {
+                const gridItem = $('<div>').addClass('grid-item shadow bg-white');
+                gridItem.html(`
+                    <img src="${item.download_url}" alt="...">
+                    <div class="p-1 px-2">
+                        <h5 class="mt-2">${item.author}</h5>
+                    </div>
+                `);
 
-            // reinitialize masonry
-            container.append(gridItem); 
-            var $grid = $('.grid').masonry({
-                itemSelector: '.grid-item',
-                columnWidth: 80,
-                gutter:10,
-                fitWidth: true
-            });
+                // reinitialize masonry
+                container.append(gridItem); 
+                $grid.imagesLoaded().progress( function() {
+                    container.removeClass('hidden');
+                    // $grid.masonry('appended', container.find('.grid-item'));
 
-            $grid.imagesLoaded().progress( function() {
-                $grid.masonry('layout');
-                $grid.masonry('reloadItems');
+                    $grid.masonry('layout');
+                    $grid.masonry('reloadItems');
+                    spinner.addClass('hidden');
+                })
+                // Layout Masonry after appending new items
             });
-        });
         }
-
+        if (data.pagination){
+            nextPage = data.pagination
+        }
     },
-    error: function(error) {
-        console.error('Error fetching data:', error); // Handle the error response
+    error: function(xhr, status, error) {
+        console.error('AJAX Error:', status, error); // Log any AJAX errors
     },
-    complete: function() {
-        spinner.addClass('hidden'); // Hide loading spinner after request completes
+    complete: function(xhr, status) {
+        console.log('AJAX Request Completed', status); // Log completion of the request
     }
-});
+})
 }
-fetchData(currentPage);
 
-// Pagination button actions
-        $('.next').on('click', function() {
-            currentPage += 1;
-            console.log(currentPage);
-            fetchData(currentPage);
-        });
+fetchImg(currentPage)
 
-        $('.prev').on('click', function() {
-            currentPage--;
-                fetchData(currentPage );
-        });
+// jQuery .on() method
+$(document).on('click', '.next', function () {
+    console.log(nextPage)
+    fetchImg(nextPage)
+});
+
+
+// function fetchData(page){
+//     $.ajax({
+//     url: `https://picsum.photos/v2/list?page=${page}&limit=10`, // API endpoint
+//     type: 'GET', // HTTP method (GET, POST, etc.)
+//     dataType: 'json', 
+//     success: function(data) {
+//         console.log(data); 
+
+//         if (data){
+//             container.addClass('hidden')
+//             $('.grid').empty();
+//             data.forEach(item => {
+//             const gridItem = $('<div>').addClass('grid-item shadow bg-white');
+//             gridItem.html(`
+//                 <img src="${item.download_url}" alt="...">
+//                 <div class="p-1 px-2">
+//                     <h5 class="mt-2">${item.author}</h5>
+//                 </div>
+//             `);
+
+//             // reinitialize masonry
+//             container.append(gridItem); 
+//             $grid.imagesLoaded().progress( function() {
+//                 // document.getElementById('loading-spinner').style.display = 'none';
+//                 container.removeClass('hidden');
+//                 $grid.masonry('layout');
+//                 $grid.masonry('reloadItems');
+//                 spinner.addClass('hidden');
+
+
+//             });
+            
+//         });
+//         }
+
+//     },
+//     error: function(error) {
+//         console.error('Error fetching data:', error); // Handle the error response
+//     },
+// });
+// }
+// fetchData(currentPage);
+
+//         $('.next').on('click', function() {
+//             currentPage += 1;
+//             console.log(currentPage);
+//             fetchData(currentPage);
+//         });
+
+//         $('.prev').on('click', function() {
+//             currentPage--;
+//                 fetchData(currentPage );
+//         });
 </script>
 
 {%endblock%}
