--- a/test1/templates/components/footer.html
+++ b/test1/templates/components/footer.html
@@ -1,4 +1,4 @@
-<footer>
+<footer class="fixed-bottom">
         <div class="text-center bg-dark text-light py-2">
             <p class="m-0">Lorem ipsum dolor sit amet consectetur adipisicing. 2024</p>
         </div>
