--- a/test1/templates/index.html
+++ b/test1/templates/index.html
@@ -8,63 +8,245 @@
 
 {%block style%}
 <style>
+
+    .sectionText{
+        z-index: 3;
+        overflow: visible;
+    }
     .hero{
         background-image: url("{%static 'img/main.jpg'%}");
         background-repeat: no-repeat;
-        height: 100vh;
+        height: 90vh;
         max-width: 100%;
         object-fit: contain;
         background-position: 50% 0%;    
         transition: 0s linear;
         transition-property: background-position;
         overflow: hidden;
+        
+    }
+
+    .overlay {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 90vh;
+        background-color: rgba(0, 0, 0, 0.25); 
+        z-index: 1;
     }
 
     .triangle-divider {
         position: absolute;
-        bottom: 0;
+        z-index: 2;
+        bottom: 9.7vh;
         left: 0;
         width: 100%;
         overflow: hidden;
         line-height: 0;
-        
     }
+    .triangle-divider svg {
+        position: relative;
+        display: block;
+        width: calc(100% + 1.3px);
+        height: 75px;
+    }
+    .shape-fill{
+        fill: white;
+    }
+
+    .grid{
+        /* margin:0 auto; */
+    }
+    .grid-item { 
+        width: 280px;
+        margin-bottom: 12px;
+        height: 220px;
+        /* max-height: 600px; */
+        position: relative;
+        transition: transform 0.3s ease; 
+        display: inline-block;
+        overflow: hidden;
+        img{
+            height: 100%;
+            width: 100%;
+            object-fit: cover;
+        }
+     }
+     .grid-item--width2{
+        width: 520px;
+    }
+    .grid-item--height2{
+        height: 450px;
+    }
+
+    .grid-item:hover {
+        transform: scale(1.05); /* Expands card on hover */
+    }
+
+    .grid-item::before{
+        content: "";
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        top: 0;
+        /* margin-bottom: 16px; */
+        background: linear-gradient(to top, rgba(0, 0, 0, 0.33), rgba(0, 0, 0, 0));
+        z-index: 1;
+    }
+
+    .overlay-content {
+        position: absolute;
+        bottom: 24px;
+        left: 12px;
+        color: white;
+        z-index: 2;
+        h5{
+            color:rgb(255, 134, 74);
+        }
+    }
+
+     .divider{
+        height: 6rem;
+     }
+
+     .section-2{
+        --s: 300px; /* control the size*/
+        --c1: #ffffff;
+        --c2: #f7f7f7;
+        
+        background:
+            conic-gradient(#0000 75%,var(--c1) 0) 0 calc(var(--s)/4),
+            conic-gradient(from 45deg,var(--c1) 25%,var(--c2) 0);
+        background-size: var(--s) var(--s);
+     }
+
+     .fa-gradient{
+        transition: transform 0.3s ease; 
+     }
+     
+     .fa-gradient:hover{
+        transform: scale(1.05);
+        background: -webkit-gradient(linear, left top, left bottom, from(#ee4527), to(#29c4be));
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+     }
 </style>
 {%endblock%}
 
 {%block content%}
-<div class="container-fluid hero">
-    <section class="row m-0 d-flex flex-column justify-content-center align-items-center px-5" style="height: 90vh;">
-            <h1 class="main-dark-2 display-1 text-start fw-bold">Unknown waters <br> await you now!</h1>
-            <p class="text-start fs-3 fw-light"> Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
+<section class="container-fluid hero position-relative overflow-visible">
+    <div class="overlay"></div>
+    <section class="m-0 d-flex flex-column justify-content-center align-items-center px-5" style="height: 80vh;">
+            <h1 class="sectionText text-gradient1 display-1 text-center fw-bold text-capitalize animate__animated animate__slideInDown">Unknown Waters <br> Await You Now!</h1>
+            <p class="sectionText text-light text-center fs-5 animate__animated animate__slideInDown animate__slow">We trust Mother Ocean to know where we belong.</p>
+            {%include 'components/searchbar.html'%}
     </section>
-</div>
 
-<div class="triangle-divider">
-    <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
-        <path d="M598.97 114.72L0 0 0 120 1200 120 1200 0 598.97 114.72z" class="shape-fill"></path>
-    </svg>
-</div>
+    <!-- <div class="triangle-divider">
+        <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+            <path d="M598.97 114.72L0 0 0 120 1200 120 1200 0 598.97 114.72z" class="shape-fill"></path>
+        </svg>
+    </div> -->
 
-<section class="p-0">
-    <div class="container">
-        <div class="row m-0 p-5">
-            <div class="col-lg-6 d-flex justify-content-center align-items-center">
-                <h1 class="fw-bold main-light"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae tempore ducimus excepturi?</h1>
+    <section class="container sectionText d-flex justify-content-center position-absolute top-100 start-50 translate-middle">
+        <div class="row m-0 p-4 bg-light shadow">
+            <div class="fa-gradient col-md-4 px-4 d-flex justify-content-center align-items-center border-end animate__animated animate__fadeIn animate__slower">
+                <i class="fa fa-globe fa-4x  mx-3 mb-3"></i>
+                <div class="d-flex flex-column">
+                    <h2 class="fw-bold mb-0"> 900+</h1>
+                    <p>Lorem ipsum dolor</p>
+                </div>
             </div>
-            <div class="col-lg-6  d-flex justify-content-center align-items-center">
-                <img src="https://picsum.photos/500" alt="" style="width: 300px; height: 300px; object-fit: cover;">
+            <div class="fa-gradient col-md-4 px-4 d-flex justify-content-center align-items-center border-end animate__animated animate__fadeIn animate__slower">
+                <i class="fa fa-plane fa-4x  mx-3 mb-3"></i>
+                <div class="d-flex flex-column">
+                    <h2 class="fw-bold mb-0"> 35+</h1>
+                    <p>Lorem ipsum dolor</p>
+                </div>
+            </div>
+            <div class="fa-gradient col-md-4 px-4 d-flex justify-content-center align-items-center animate__animated animate__fadeIn animate__slower">
+                <i class="fa fa-map-marker fa-4x mx-3  mb-3" aria-hidden="true"></i>
+                <div class="d-flex flex-column">
+                    <h2 class="fw-bold mb-0"> 7</h1>
+                    <p>Lorem ipsum dolor</p>
+                </div>
             </div>
         </div>
-    </div>
+    </section>
 </section>
+
+<div class="divider"></div>
+
+<section class="container-fluid p-0 section-2">
+
+    <section class="container  p-5">
+        <h1 class="fw-bolder text-gradient2">Popular Destinations</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae nam obcaecati non?</p>
+    
+        <div class="grid">
+            <div class="grid-item grid-item--width2 position-relative">
+                    <img src="https://picsum.photos/538/354" alt="...">
+                    <div class="overlay-content mx-2">
+                        <h4 class="text-gradient3 fs-bolder">Menzoberranzan</h5>
+                        <p class="text-light m-0">Lorem, ipsum dolor.</p>
+                    </div>
+            </div>
+            <div class="grid-item">
+                <img src="https://picsum.photos/536/354" alt="...">
+                <div class="overlay-content mx-2">
+                    <h4 class="text-gradient3 fs-bolder">Neverwinter</h5>
+                    <p class="text-light m-0">Lorem, ipsum dolor.</p>
+                </div>
+            </div>
+            <div class="grid-item grid-item--height2">
+                <img src="https://picsum.photos/533/354" alt="...">
+                <div class="overlay-content mx-2">
+                    <h4 class="text-gradient3 fs-bolder">Baldur's Gate</h5>
+                    <p class="text-light m-0">Lorem, ipsum dolor.</p>
+                </div>
+            </div>
+            
+            <div class="grid-item ">
+                <img src="https://picsum.photos/532/354" alt="...">
+                <div class="overlay-content mx-2">
+                    <h4 class="text-gradient3 fs-bolder">New House of Hope</h5>
+                    <p class="text-light m-0">Lorem, ipsum dolor.</p>
+                </div>
+            </div>    
+            <div class="grid-item grid-item--width2">
+                <img src="https://picsum.photos/558/354" alt="...">
+                <div class="overlay-content mx-2">
+                    <h4 class="text-gradient3 fs-bolder">Waterdeep</h5>
+                    <p class="text-light m-0">Lorem, ipsum dolor.</p>
+                </div>
+            </div>
+        </div>
+    
+        <a href='' class="text-gradient3 "> Discover More</a>
+    
+    </section>
+
+</section>
+
 
 {%endblock%}
 
 {%block script%}
+
 <script>
+    // parallax bg
     $(window).scroll(function () {
         $(".hero").css("background-position","50% " + (($(this).scrollTop() / 2) + "px"));
+    });
+
+    var $grid = $('.grid').masonry({
+        // itemSelector: '.grid-item',
+        columnWidth: 20,
+        gutter:10,
+        stagger:70,
+        fitWidth: true
     });
 </script>
 {%endblock%}
