--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -42,3 +42,30 @@ footer{
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+
+.btn-main{
+  transition: background-position 0.5s;
+  background-size: 200% 100%;
+  background-image: linear-gradient(to right, #347474 50%, white 50%);
+  background-position: 100% 0;  
+  color: #347474;
+  padding: 1rem 2rem;
+  border-left-style: solid;
+  border-left-width: 1rem;
+  border-left-color: #347474;
+  text-transform: capitalize !important;
+  width: fit-content;
+  text-decoration: none;
+  text-align: center;
+  font-size: large;
+  font-family: "Inter", sans-serif  !important;
+  font-weight: bold;
+}
+
+.btn-main:hover, .btn-main:focus, .btn-main:active, .btn-main.active, .open>.dropdown-toggle.btn-main {
+  color: white;
+  border-left-style: solid;
+  border-left-width: 1rem;
+  border-left-color: white;
+  background-position: 0 0;
+}
