--- a/test1/templates/index.html
+++ b/test1/templates/index.html
@@ -8,7 +8,15 @@
 
 {%block style%}
 <style>
-
+    .overlay2{
+        position: absolute;
+        background-color: rgba(13, 18, 23, 0.85);
+        width: 100%;
+        height: 100%;
+        z-index: 1;
+        top: 0;
+        left: 0;
+    }
     .sectionText{
         z-index: 3;
         overflow: visible;
@@ -25,17 +33,15 @@
         overflow: hidden;
         
     }
-
     .overlay {
         position: absolute;
         top: 0;
         left: 0;
         width: 100%;
-        height: 90vh;
+        height: 100%;
         background-color: rgba(0, 0, 0, 0.25); 
         z-index: 1;
     }
-
     .triangle-divider {
         position: absolute;
         z-index: 2;
@@ -54,7 +60,6 @@
     .shape-fill{
         fill: white;
     }
-
     .grid{
         /* margin:0 auto; */
     }
@@ -72,18 +77,16 @@
             width: 100%;
             object-fit: cover;
         }
-     }
+    }
      .grid-item--width2{
         width: 520px;
     }
     .grid-item--height2{
         height: 450px;
     }
-
     .grid-item:hover {
         transform: scale(1.05); /* Expands card on hover */
     }
-
     .grid-item::before{
         content: "";
         position: absolute;
@@ -95,7 +98,6 @@
         background: linear-gradient(to top, rgba(0, 0, 0, 0.33), rgba(0, 0, 0, 0));
         z-index: 1;
     }
-
     .overlay-content {
         position: absolute;
         bottom: 24px;
@@ -106,12 +108,10 @@
             color:rgb(255, 134, 74);
         }
     }
-
-     .divider{
+    .divider{
         height: 6rem;
-     }
-
-     .section-2{
+    }
+    .section-2{
         --s: 300px; /* control the size*/
         --c1: #ffffff;
         --c2: #f7f7f7;
@@ -120,23 +120,26 @@
             conic-gradient(#0000 75%,var(--c1) 0) 0 calc(var(--s)/4),
             conic-gradient(from 45deg,var(--c1) 25%,var(--c2) 0);
         background-size: var(--s) var(--s);
-     }
-
-     .fa-gradient{
+    }
+    .fa-gradient{
         transition: transform 0.3s ease; 
-     }
-     
-     .fa-gradient:hover{
+    }
+    .fa-gradient:hover{
         transform: scale(1.05);
         background: -webkit-gradient(linear, left top, left bottom, from(#ee4527), to(#29c4be));
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
-     }
+    }
+    .imgcar{
+        width: 560px; height: 560px;
+        object-fit: cover;
+    }
 </style>
 {%endblock%}
 
 {%block content%}
-<section class="container-fluid hero position-relative overflow-visible">
+<!-- hero -->
+<section class="container-fluid hero position-relative overflow-visible ">
     <div class="overlay"></div>
     <section class="m-0 d-flex flex-column justify-content-center align-items-center px-5" style="height: 80vh;">
             <h1 class="sectionText text-gradient1 display-1 text-center fw-bold text-capitalize animate__animated animate__slideInDown">Unknown Waters <br> Await You Now!</h1>
@@ -150,23 +153,24 @@
         </svg>
     </div> -->
 
-    <section class="container sectionText d-flex justify-content-center position-absolute top-100 start-50 translate-middle">
+    <section class="container sectionText d-flex justify-content-center position-absolute top-100 start-50 translate-middle
+    animate__animated animate__fadeInUp">
         <div class="row m-0 p-4 bg-light shadow">
-            <div class="fa-gradient col-md-4 px-4 d-flex justify-content-center align-items-center border-end animate__animated animate__fadeIn animate__slower">
+            <div class="fa-gradient col-md-4 px-4 d-flex justify-content-center align-items-center border-end">
                 <i class="fa fa-globe fa-4x  mx-3 mb-3"></i>
                 <div class="d-flex flex-column">
                     <h2 class="fw-bold mb-0"> 900+</h1>
                     <p>Lorem ipsum dolor</p>
                 </div>
             </div>
-            <div class="fa-gradient col-md-4 px-4 d-flex justify-content-center align-items-center border-end animate__animated animate__fadeIn animate__slower">
+            <div class="fa-gradient col-md-4 px-4 d-flex justify-content-center align-items-center border-end">
                 <i class="fa fa-plane fa-4x  mx-3 mb-3"></i>
                 <div class="d-flex flex-column">
                     <h2 class="fw-bold mb-0"> 35+</h1>
                     <p>Lorem ipsum dolor</p>
                 </div>
             </div>
-            <div class="fa-gradient col-md-4 px-4 d-flex justify-content-center align-items-center animate__animated animate__fadeIn animate__slower">
+            <div class="fa-gradient col-md-4 px-4 d-flex justify-content-center align-items-center">
                 <i class="fa fa-map-marker fa-4x mx-3  mb-3" aria-hidden="true"></i>
                 <div class="d-flex flex-column">
                     <h2 class="fw-bold mb-0"> 7</h1>
@@ -177,9 +181,10 @@
     </section>
 </section>
 
-<div class="divider"></div>
 
+<!-- destinations -->
 <section class="container-fluid p-0 section-2">
+    <div class="divider"></div>
 
     <section class="container  p-5">
         <h1 class="fw-bolder text-gradient2">Popular Destinations</h1>
@@ -189,21 +194,21 @@
             <div class="grid-item grid-item--width2 position-relative">
                     <img src="https://picsum.photos/538/354" alt="...">
                     <div class="overlay-content mx-2">
-                        <h4 class="text-gradient3 fs-bolder">Menzoberranzan</h5>
+                        <h4 class="main-orange fs-bolder">Menzoberranzan</h5>
                         <p class="text-light m-0">Lorem, ipsum dolor.</p>
                     </div>
             </div>
             <div class="grid-item">
                 <img src="https://picsum.photos/536/354" alt="...">
                 <div class="overlay-content mx-2">
-                    <h4 class="text-gradient3 fs-bolder">Neverwinter</h5>
+                    <h4 class="main-orange fs-bolder">Neverwinter</h5>
                     <p class="text-light m-0">Lorem, ipsum dolor.</p>
                 </div>
             </div>
             <div class="grid-item grid-item--height2">
                 <img src="https://picsum.photos/533/354" alt="...">
                 <div class="overlay-content mx-2">
-                    <h4 class="text-gradient3 fs-bolder">Baldur's Gate</h5>
+                    <h4 class="main-orange fs-bolder">Baldur's Gate</h5>
                     <p class="text-light m-0">Lorem, ipsum dolor.</p>
                 </div>
             </div>
@@ -224,16 +229,85 @@
             </div>
         </div>
     
-        <a href='' class="text-gradient3 "> Discover More</a>
+        <a href='' class="text-gradient3 ">Discover More</a>
     
     </section>
 
 </section>
 
+<!-- showoff -->
+<section class="container-fluid position-relative py-5"  style="background: url('https://images.unsplash.com/photo-1508624217470-5ef0f947d8be'); object-fit: cover;">
+    <div class="overlay2"></div>
+    <div class="row position-relative z-2 splide" id="image-carousel" aria-label="vertical carousel" data-splide='{"arrows":false, "pagination":false}'>
+        <div class="col-lg-6 px-lg-5 d-flex flex-column justify-content-center border-end border-white">
+            <div class="splide__track">
+                <ul class="splide__list">
+                    <li class="splide__slide">
+                        <h1 class="text-start text-white">Description of some sort.</h1>
+                        <p class="text-start text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam earum id at.</p>  
+                    </li>
+                    <li class="splide__slide">
+                        <h1 class="text-start text-white">Description2 of some sort.</h1>
+                        <p class="text-start text-white">Lorem ipsumasd dolor sit amet consectetur adipisicing elit. Numquam earum id at.</p>
+                    </li>
+                    <li class="splide__slide">
+                        <h1 class="text-start text-white">Description3 of some sort.</h1>
+                        <p class="text-start text-white">Lorem ipsum asdasddolor sit amet consectetur adipisicing elit. Numquam earum id at.</p>
+                    </li>
+                </ul>
+            </div>
+            <!-- <h1 class="text-start text-white">Description of some sort.</h1>
+            <p class="text-start text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam earum id at.</p> -->
+            <a href="" class="btn-main"> More Details </a>
+        </div>
+        <div class="col-lg-6 d-flex justify-content-center">
+            <img src="https://images.unsplash.com/photo-1508624217470-5ef0f947d8be?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+             alt="" class="imgcar">
+                
+        </div>
+    </div>
+
+    <div class="divider"></div>
+
+    <section class="container">
+        <div class="z-3">
+            <h1 class="text-center text-light">a Title but with the word title is colored differently</h1>
+            <p class="text-center text-light">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloremque accusantium dolorum fugiat.</p>
+        </div>
+        
+
+        <div class="splide z-3" id="card-carousel" aria-label="huh">
+            <div class="splide__track">
+                <div class="splide__list">
+                    <div class="card border-0 shadow rounded-0" style="width: 28rem; height: 36rem;">
+                        <img src="https://images.unsplash.com/photo-1565643355044-000fbad87cc5"
+                         class="card-img-top rounded-0" alt="..." style="height: 24rem;">
+                        <div class="card-body">
+                          <h4 class="fw-bolder">Card title</h4>
+                          <p class="">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </section>
+
+
+</section>
+
+
 
 {%endblock%}
 
 {%block script%}
+<script>
+    new Splide( '#image-carousel' ).mount();
+    new Splide( '#card-carousel' ).mount();
+
+</script>
+
 
 <script>
     // parallax bg
